--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     </div>
                 </div>
     
-                <div class="col-5 header-dealer">
-                    <div class="dealer bd-left">
+                <div class="header-dealer">
+                    <div class="dealer">
                         <span>Официальный дилер Mercedes-Benz Trucks</span>
                         <img src="./img/logo/UTS.png" alt="United Tract Service">
                     </div>
@@ -137,7 +137,7 @@
                                 <div class="info2" style="display: block;">
                                 <ul>
                                     <li>
-                                        <a href="https://www.mb-uts.ru/catalog/new-actros/">FEW</a>
+                                        <a href="https://www.mb-uts.ru/catalog/new-actros/">FAW</a>
                                     </li>
                                     <li>
                                         <a href="https://www.mb-uts.ru/catalog/new-actros/">SHACMAN X3000</a>
