changing the structure

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                         <div class="block">
                             <div class="block-title">Автомобили в наличии</div>
                             <div class="accordion_item active">
-                            <div class="title_block">Седельные тягачи</div>
-                                <div class="info" style="display: block;">
+                                <div class="title_block">Седельные тягачи</div>
+                                <div class="info">
                                     <ul>
                                         <li>
                                             <a href="https://www.mb-uts.ru/catalog/new-actros/">Actros SFTP</a>
@@ -134,7 +134,7 @@
                                 </div>
                             </div>
                             <div class="text-block">Тягачи SHACMAN</div>
-                                <div class="info2" style="display: block;">
+                            <div class="info2">
                                 <ul>
                                     <li>
                                         <a href="https://www.mb-uts.ru/catalog/new-actros/">FAW</a>
@@ -151,36 +151,40 @@
                         </div>
                     </div>
                 </div>
-            <div class="content">
-                <div class="text">
-                    <ul>
-                        <li>
-                            <a href="https://www.mb-uts.ru/" class="heading">Главная</a>
-                        </li>
-                        <li>
-                            <span>Модельный ряд</span>
-                        </li>
-                    </ul>
-                </div>
-                <h2 class="content-title">Модельный ряд</h2>
-                <div class="content-list">
-                    <div class="item" id="box1">
-                    <img src="./img/card/card_1.png" class="item-image" alt="eroor">
-                    <div class="item-info">
-                        <a href="https://www.mb-uts.ru/catalog/new-actros/" class="item-info_title">Actros SFTP </a>
-                        <div class="item-desc">
-                            <p class="description">
-                                Он – мощный, удобный в управлении и безопасный. 
-                                А разнообразие вариантов комплектации и модификаций 
-                                позволяет сконфигурировать идеальный автомобиль для 
-                                выполнения практически любой задачи в сфере магистральных 
-                                грузовых перевозок.
-                            </p>
-                        </div>
+                <div class="content">
+                    <div class="text">
+                        <ul>
+                            <li>
+                                <a href="https://www.mb-uts.ru/" class="heading">Главная</a>
+                            </li>
+                            <li>
+                                <span>Модельный ряд</span>
+                            </li>
+                        </ul>
                     </div>
-                </div> 
+                    <h2 class="content-title">Модельный ряд</h2>
+                    <div class="content-list">
+                        <div class="item" id="box1">
+                            <a href="https://www.mb-uts.ru/catalog/new-actros/">
+                                <img src="./img/card/card_1.png" class="item-image" alt="Actros SFTP">
+                            </a>
+                            <div class="item-info">
+                                <a href="https://www.mb-uts.ru/catalog/new-actros/" class="item-info_title">Actros SFTP </a>
+                                <div class="item-desc">
+                                    <p class="description">
+                                        Он – мощный, удобный в управлении и безопасный. 
+                                        А разнообразие вариантов комплектации и модификаций 
+                                        позволяет сконфигурировать идеальный автомобиль для 
+                                        выполнения практически любой задачи в сфере магистральных 
+                                        грузовых перевозок.
+                                    </p>
+                                </div>
+                            </div>
+                        </div> 
                         <div class="item" id="box2">
-                            <img src="./img/card/card_2.png" class="item-image" alt="erorr">
+                            <a href="https://www.mb-uts.ru/catalog/new-actros/">
+                                <img src="./img/card/card_2.png" class="item-image" alt="Arocs">
+                            </a>
                             <div class="item-info">
                                 <a href="https://www.mb-uts.ru/catalog/new-actros/" class="item-info_title">Arocs</a>
                                 <div class="item-desc">
@@ -193,35 +197,39 @@
                                 </div>
                             </div>
                         </div>  
-                                <div class="item" id="box3">
-                                    <img src="./img/card/card_3.png" class="item-image" alt="erorr">
-                                    <div class="item-info">
-                                        <a href="https://www.mb-uts.ru/catalog/new-actros/" class="item-info_title">FAW</a>
-                                        <div class="item-desc">
-                                            <p class="description">
-                                                Самосвалы FAW с колесными формулами 6х4 и 8х4.
-                                                Коммерческая техника данной китайской марки отлично 
-                                                зарекомендовала себя за десятки лет эксплуатации, в том 
-                                                числе и на территории России.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div> 
-                                        <div class="item" id="box4">
-                                            <img src="./img/card/card_4.png" class="item-image1" alt="erorr">
-                                            <div class="item-info1">
-                                                <a href="https://www.mb-uts.ru/catalog/new-actros/" class="item-info_title1">SHACMAN - X3000</a>
-                                                <div class="item-info1">
-                                                    <p class="description">
-                                                        Автомобили серии X3000 соответствуют требованиям <br> экологического стандарта Евро-V. Автомобили данной <br> серии оснащены новейшими системами с функциями <br> интеллектуального управления, что позволяет <br> осуществлять интернет-мониторинг, контроль работы <br> автоколонны и т.д.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
+                        <div class="item" id="box3">
+                            <a href="https://www.mb-uts.ru/catalog/new-actros/">
+                                <img src="./img/card/card_3.png" class="item-image" alt="FAW">
+                            </a>
+                            <div class="item-info">
+                                <a href="https://www.mb-uts.ru/catalog/new-actros/" class="item-info_title">FAW</a>
+                                <div class="item-desc">
+                                    <p class="description">
+                                        Самосвалы FAW с колесными формулами 6х4 и 8х4.
+                                        Коммерческая техника данной китайской марки отлично 
+                                        зарекомендовала себя за десятки лет эксплуатации, в том 
+                                        числе и на территории России.
+                                    </p>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="item" id="box4">
+                            <a href="https://www.mb-uts.ru/catalog/new-actros/">
+                                <img src="./img/card/card_4.png" class="item-image1" alt="SHACMAN - X3000">
+                            </a>
+                            <div class="item-info1">
+                                <a href="https://www.mb-uts.ru/catalog/new-actros/" class="item-info_title1">SHACMAN - X3000</a>
+                                <div class="item-info1">
+                                    <p class="description">
+                                        Автомобили серии X3000 соответствуют требованиям <br> экологического стандарта Евро-V. Автомобили данной <br> серии оснащены новейшими системами с функциями <br> интеллектуального управления, что позволяет <br> осуществлять интернет-мониторинг, контроль работы <br> автоколонны и т.д.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
     </main>
     
     <footer>
